<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="althority.asnookerlikegame.com.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/player_1"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/scorePlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:freezesText="true"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="64sp" />

                <TextView
                    android:id="@+id/foulPlayer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="-10dp"
                    android:freezesText="true"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="plusOnePointPlayer1"
                    android:text="@string/redBallPlayer1Btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="plusThreePointsPlayer1"
                    android:text="@string/greenBallPlayer1Btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="plusSevenPointsPlayer1"
                    android:text="@string/blackBallPlayer1Btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="24dp"
                    android:onClick="foulPlayer1"
                    android:text="@string/foulPlayer1Btn" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/player_2"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/scorePlayer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:freezesText="true"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="64sp" />

                <TextView
                    android:id="@+id/foulPlayer2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="-10dp"
                    android:freezesText="true"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="plusOnePointPlayer2"
                    android:text="@string/redBallPlayer2Btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="plusThreePointsPlayer2"
                    android:text="@string/greenBallPlayer2Btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:onClick="plusSevenPointsPlayer2"
                    android:text="@string/blackBallPlayer2Btn" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="24dp"
                    android:onClick="foulPlayer2"
                    android:text="@string/foulPlayer2Btn" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="resetScore"
            android:text="@string/resetBtn" />

    </RelativeLayout>
</ScrollView>
